# skymodlauncher

./: CMakeLists.txt  CMakePresets.json  imgui.ini  install_nxh_handler.sh  linktest.html  nexusdocs.txt  readme.md  skse_proton.sh  urlhandler.txt  urltest.c
src/: GetModFileMetadata.gql  asyncengine.h  asyncproc.cpp  asyncproc.h  curlasync.cpp  curlasync.h  curlwrap.h  enums.cpp  enums.h  filewrapper.h  fomod.cpp  fomod.h  fomod_backend.cpp  fomod_backend.h  fomod_ui.cpp  fomod_ui.h  fomodauto.h  imgui.h  json.hpp  main.cpp  mod.h  modmgr.cpp  modmgr.h  modmgr2.cpp  modmgr_collection.cpp  modmgr_collection.h  modmgr_collection_ui.cpp  modmgr_collection_ui.h  modmgr_json.cpp  modmgr_json.h  modmgr_ui.cpp  nxmurl.h  procex.cpp  procex.h  prochelper.cpp  prochelper.h  version.h
